# XiPackets-definitions

./: .gitignore  README.md  fields.py  packet.py  parse_clang.py  pyproject.toml
.github/workflows/: build.yml  pr-diff.yml
definitions/: c2s.h  c2s.types.h  s2c.h  s2c.types.h  typedefs.h
fields/: __init__.py  exceptions.py  hint_utils.py  models.py  parsers.py  type_finder.py  type_utils.py  types.py
packets/: __init__.py  exceptions.py  models.py  utils.py
renderers/: ffi.py  json.py  lls.py  lua.py  viewed.py  xml_builder.py
renderers/templates/: ffxi.xml.j2  lua.j2  packet_ids.j2
renderers/viewed/: lookup_renderer.py  xml_builder.py
source/c2s/: packets.h  types.h
source/s2c/: packets.h  types.h
